--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <input type="text" id="city-input" placeholder="Enter city name">
         <button id="search-btn">Search</button>
         <div id="weather-info">
-            <div class="weather-icon"></div>
+            <div class="chart-container">
+                <div class="chart-bar high-temp-bar"></div>
+                <div class="chart-bar low-temp-bar"></div>
+                <div class="chart-bar forecast-bar"></div>
+                <div class="chart-bar humidity bar"></div>
+            </div>
             <div class="weather-details">
                 <h2 class="city-name"></h2>
                 <p class="temperature"></p>
